changed package.json file for development'

--- a/day1/package.json
+++ b/day1/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "build": "rm -rf dist && tsc",
     "start": "node build/index.js"
   },
